gcc/lto/lto.c
@@ -1,5 +1,5 @@
 /* Top-level LTO routines.
-   Copyright 2009 Free Software Foundation, Inc.
+   Copyright 2009, 2010 Free Software Foundation, Inc.
    Contributed by CodeSourcery, Inc.
 
 This file is part of GCC.
@@ -1069,6 +1069,8 @@ lto_wpa_write_files (void)
   return output_files;
 }
 
+/* Template of LTRANS dumpbase suffix.  */
+#define DUMPBASE_SUFFIX	".ltrans18446744073709551615"
 
 /* Perform local transformations (LTRANS) on the files in the NULL-terminated
    FILES array.  These should have been written previously by
@@ -1088,6 +1090,8 @@ lto_execute_ltrans (char *const *files)
   int err;
   int status;
   FILE *ltrans_output_list_stream = NULL;
+  bool seen_dumpbase = false;
+  char *dumpbase_suffix = NULL;
 
   timevar_push (TV_WHOPR_WPA_LTRANS_EXEC);
 
@@ -1126,13 +1130,26 @@ lto_execute_ltrans (char *const *files)
 	  ++j;
 	obstack_init (&env_obstack);
 	obstack_grow (&env_obstack, &collect_gcc_options[i], j - i);
-	obstack_1grow (&env_obstack, 0);
+	if (seen_dumpbase)
+	  obstack_grow (&env_obstack, DUMPBASE_SUFFIX,
+			sizeof (DUMPBASE_SUFFIX));
+	else
+	  obstack_1grow (&env_obstack, 0);
 	option = XOBFINISH (&env_obstack, char *);
+	if (seen_dumpbase)
+	  {
+	    dumpbase_suffix = option + 7 + j - i;
+	    seen_dumpbase = false;
+	  }
 
 	/* LTRANS does not need -fwpa nor -fltrans-*.  */
 	if (strncmp (option, "-fwpa", 5) != 0
 	    && strncmp (option, "-fltrans-", 9) != 0)
-	  *argv_ptr++ = option;
+	  {
+	    if (strncmp (option, "-dumpbase", 9) == 0)
+	      seen_dumpbase = true;
+	    *argv_ptr++ = option;
+	  }
       }
   *argv_ptr++ = "-fltrans";
 
@@ -1189,6 +1206,11 @@ lto_execute_ltrans (char *const *files)
 	  argv_ptr[1] = output_name;
 	  argv_ptr[2] = files[i];
 	  argv_ptr[3] = NULL;
+
+	  /* Append a sequence number to -dumpbase for LTRANS.  */
+	  if (dumpbase_suffix)
+	    snprintf (dumpbase_suffix, sizeof (DUMPBASE_SUFFIX) - 7,
+		      "%lu", (unsigned long) i);
 
 	  /* Execute the driver.  */
 	  pex = pex_init (0, "lto1", NULL);
